--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
+    "typechain": "typechain --target ethers-v6 --out-dir src/contracts/typechain src/contracts/abi/*.json",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
@@ -28,6 +29,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.61.5",
+    "@typechain/ethers-v6": "^0.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -41,6 +43,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.71.0",
+    "typechain": "^8.3.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
